# grumpy-marmoset

./: CMakeLists.txt  CSVMaker  PythonPGNParser
PGNScraper/: ChessMastersList.py  Deltas.py  EnumeratedMastersList.py  GetPGNDownloads.py  HowManyPages.py  URLConverter.py  config.ini  divideAndConquer.py
PythonPGNParser/: CSVMaker.py  bigPGNMaker.py  gamesList.py
include/: array_board.hpp  constants.hpp
src/: CMakeLists.txt  array_board.cpp  grumpy-marmoset.cpp
test/: CMakeLists.txt  array_board_test.hpp  grumpy-marmoset-test.cpp
